# mesa

./: .gitmodules  configure.ac
docs/: GL3.txt  work_in_progress.txt
include/GL/internal/: dri_interface.h
src/: Makefile
src/glsl/: Makefile  Makefile.am  Makefile.sources  ast.h  ast_array_index.cpp  ast_function.cpp  ast_to_hir.cpp  ast_type.cpp  builtin_functions.cpp  builtin_type_macros.h  builtin_variables.cpp  glsl_lexer.ll  glsl_parser.yy  glsl_parser_extras.cpp  glsl_parser_extras.h  glsl_symbol_table.cpp  glsl_symbol_table.h  glsl_types.cpp  glsl_types.h  ir.cpp  ir.h  ir_basic_block.cpp  ir_clone.cpp  ir_constant_expression.cpp  ir_expression_flattening.cpp  ir_function.cpp  ir_function_detect_recursion.cpp  ir_hierarchical_visitor.cpp  ir_hierarchical_visitor.h  ir_hv_accept.cpp  ir_optimization.h  ir_print_visitor.cpp  ir_print_visitor.h  ir_reader.cpp  ir_rvalue_visitor.cpp  ir_set_program_inouts.cpp  ir_uniform.h  ir_validate.cpp  ir_variable.cpp  ir_variable_refcount.cpp  (+44 more)
src/glsl/glcpp/: glcpp-parse.y
src/glsl/tests/: sexps.py
src/glx/: dri2.c  dri2_glx.c
src/mapi/es1api/: Makefile
src/mapi/glapi/: glapi_gentable.c  glapi_mapi_tmp.h  glapi_sparc.S  glapi_x86-64.S  glapi_x86.S  glapitable.h  glapitemp.h  glprocs.h
src/mapi/shared-glapi/: Makefile
src/mesa/: Android.gen.mk  Makefile  Makefile.sources  SConscript  sources.mak
src/mesa/main/: .gitignore  api_exec.c  api_validate.c  attrib.c  bufferobj.c  buffers.c  compiler.h  config.h  context.c  dd.h  (+39 more)
src/mesa/main/tests/: .gitignore  Makefile.am  dispatch_sanity.cpp  threadpool-test.c
(+208 files in other folders)
